@startuml mapping-02-scholarships-applications
title Relational Mapping — Scholarships & Applications

skinparam linetype ortho
hide circle
skinparam class {
  BackgroundColor White
  BorderColor #2563eb
}

' ----- reference tables owned by other contexts (shown so FKs have a target) -----
entity "Users" as users <<ref · Identity ctx>> #EEEEEE {
  *Id : uniqueidentifier <<PK>>
}
entity "Payments" as pay <<ref · Booking ctx>> #EEEEEE {
  *Id : uniqueidentifier <<PK>>
}

entity "Categories" as cat {
  *Id : uniqueidentifier <<PK>>
  --
  Slug : nvarchar <<UK>>
  NameEn : nvarchar
}

entity "Scholarships" as sch {
  *Id : uniqueidentifier <<PK>>
  --
  CategoryId : uniqueidentifier <<FK, NULL>>
  OwnerCompanyId : uniqueidentifier <<FK, NULL>>
  Slug : nvarchar <<UK>>
  Status : int
  Mode : int
  Deadline : datetimeoffset
  ReviewFeeUsd : decimal
  IsDeleted : bit <<SD>>
}

entity "ScholarshipChildren" as schc {
  *Id : uniqueidentifier <<PK>>
  --
  ScholarshipId : uniqueidentifier <<FK>>
  ChildType : nvarchar
  KeyEn : nvarchar
}

entity "SavedScholarships" as saved {
  *Id : uniqueidentifier <<PK>>
  --
  UserId : uniqueidentifier <<FK>>
  ScholarshipId : uniqueidentifier <<FK>>
  SavedAt : datetimeoffset
}

entity "Applications" as app {
  *Id : uniqueidentifier <<PK>>
  --
  UserId : uniqueidentifier <<FK>>
  ScholarshipId : uniqueidentifier <<FK>>
  Status : int
  Mode : int
  PersonalNotes : nvarchar <<enc>>
}

entity "ApplicationChildren" as appc {
  *Id : uniqueidentifier <<PK>>
  --
  ApplicationTrackerId : uniqueidentifier <<FK>>
  ChildType : nvarchar
  Content : nvarchar
}

entity "Documents" as doc {
  *Id : uniqueidentifier <<PK>>
  --
  OwnerUserId : uniqueidentifier <<FK>>
  ApplicationTrackerId : uniqueidentifier <<FK, NULL>>
  Category : int
  StoragePath : nvarchar
}

entity "CompanyReviewRequests" as crr {
  *Id : uniqueidentifier <<PK>>
  --
  ScholarshipId : uniqueidentifier <<FK>>
  StudentId : uniqueidentifier <<FK>>
  CompanyId : uniqueidentifier <<FK>>
  PaymentId : uniqueidentifier <<FK, NULL>>
  Status : int
  ReviewFeeUsdSnapshot : decimal
}

entity "CompanyReviews" as cr {
  *Id : uniqueidentifier <<PK>>
  --
  ApplicationTrackerId : uniqueidentifier <<FK>>
  Rating : int
  IsHiddenByAdmin : bit
}

entity "CompanyReviewPayments" as crp <<legacy / deprecated>> {
  *Id : uniqueidentifier <<PK>>
  --
  ApplicationTrackerId : uniqueidentifier <<FK>>
  CompanyId : uniqueidentifier <<FK>>
  Status : nvarchar
  StripePaymentIntentId : nvarchar
}

' ----- intra-context FKs -----
cat   |o--o{ sch
sch   ||--o{ schc
sch   ||--o{ saved
sch   ||--o{ app
app   ||--o{ appc
app   |o--o{ doc
app   ||--o| cr
sch   ||--o{ crr

' ----- cross-context FKs (to reference tables) -----
users ||--o{ sch   : OwnerCompanyId
users ||--o{ saved : UserId
users ||--o{ app   : UserId
users ||--o{ doc   : OwnerUserId
users ||--o{ crr   : StudentId / CompanyId
pay   |o--o| crr   : PaymentId
app   ||--o{ crp   : ApplicationTrackerId
users ||--o{ crp   : CompanyId

note bottom of doc
  FIX (review): Documents.ApplicationTrackerId is a nullable FK ->
  one application has MANY documents (1:N), correcting the SRS class
  diagram which showed 0..1.
end note
@enduml
